--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Everything about your favorite Manga and Anime !" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>Animanga</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+  <meta content="Everything about your favorite Manga and Anime !" name="description" />
+  <link href="/vite.svg" rel="icon" type="image/svg+xml" />
+  <title>Animanga</title>
+</head>
+<body>
+<main id="app" role="main"></main>
+<script src="/src/main.ts" type="module"></script>
+</body>
 </html>
